WebContent/css/signup.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
 
html {
    font-family: "Montserrat";
}

#top, #bottom, #left, #right {
	background: #006f4a;
	position: fixed;
	}
	#left, #right {
		top: 0; bottom: 0;
		width: 10px;
		}
		#left { left: 0; }
		#right { right: 0; }
		
	#top{
		left: 0; right: 0;
		height: 0px;
		}
		#top { top: 0; }

nav {
    position: fixed;
    height: 66px;
    background-color: white;
    box-shadow: 0 5px 5px -10px #333;
    z-index: 5;
    border-style: solid;
    border-width: 10px;
    border-color: #006f4a;
    border-bottom: 0px;
    
}

#wrapper {
	margin-top: 35px;
    width: 250px;
    display: inline-flex;
}

#tbox {
    margin: 30 auto;
    background-color: transparent; 
    width: 250px;
    height: 75px;
    position: fixed;
    box-shadow: 0px 0px;
}

#title {
    font-family: "Montserrat";
    font-size: 22px;
    text-align: left;
    line-height: 95%;
    font-weight: 600;
    width: 45%;
    margin-top: 0px;
    color: #1f1f1f;
}

#arrow {
    height: 75px;
    margin: 2px;
}

/* others below */

#sufeed {
    position: relative;
    margin: 0 auto;
    text-align: left;
    top: 135px;
    width: 600px;
    padding: 20px;
    padding-top: 40px;
    border-radius: 3px;
    border-style: solid;
    border-width: 0px;
    border-color: none;
  /*  background-color: #fbfbfb; 
    box-shadow: 0 5px 5px -5px #333; */
}

.wrap {
    width: 100%; /* ** */
    display: inline-flex;
    margin-bottom: 11px;
}

.f {
    width: 100%; /* ** */
}

#sufeed .twos {
    width: 95%;
    height: 20px;
    margin-top: -10px;
    margin-bottom: 5px;
    margin-left: 4px;
    border-radius: 2px;
    border-style: solid;
    border-width: 1px;
    border-color: rgba(0, 0, 0, 0.3);
    opacity: 0.9;
    font-size: 11px;
    padding-left: 2px;
    
}

#lastName, #email, #idNum {
    width: 97.5%;
    height: 20px;
    margin-top: -10px;
    margin-bottom: 5px;
    margin-left: 4px;
    border-radius: 2px;
    border-style: solid;
    border-width: 1px;
    border-color: rgba(0, 0, 0, 0.3);
    opacity: 0.9;
    font-size: 11px;
    padding-left: 2px;
}

#idNum {
    width: 155px;
}

#courseName {
    position: relative;
    top: -10px;
}

p {
    width: 150px;
    font-size: 11px;
    padding: 0px;
    margin-top: -10px;
    margin-bottom: 1.5px;
    font-weight: 600;
    color: #006f4a;
}

#signupb, #backb {
    left: 30%;
    position: relative
    margin: 0 auto;
    font-family: "Montserrat";
    height: 25px;
    width: 100px;
    font-size: 10px;
    line-height: 250%;
    background-color: #1b1b1b;
    color: snow;
    border-radius: 3px;
    box-shadow: 0 5px 5px -5px #333;
}

#signupb:hover, #backb:hover {
	background-color: black;
}

#modal1 {
    height: 25%;
}

#modver {
    width: 100%;
    font-size: 14px;
    font-weight: 400;
}

/*This changes the text color of the select options.*/
ul.dropdown-content.select-dropdown li span {
	font-size: 11px;
    color: #1f1f1f;
    font-family: "Montserrat";
}

/*This changes the FIRST option of the select (its disabled, so it should be gray)*/
ul.dropdown-content.select-dropdown li.disabled span {
	font-size: 11px;
    color: #888888; 
    font-family: "Montserrat";
 
}

/*This is for the select tag size customization.*/
div.input-field {
	width: 95%;
    margin-top: -10px;
    margin-left: 4px;
    margin-bottom: -19px;
}

.select-wrapper input.select-dropdown {
    height: 20px;
    width: 100%;
    font-size: 11px;
    border-radius: 2px;
    border-style: solid;
    border-width: 1px;
    border-color: rgba(0, 0, 0, 0.3);
    opacity: 0.9;
    padding-left: 2px;
    
}

#sufeed .errors {
    display: none;
    margin-top: -4px;
    margin-left: 5px;
    font-size: 8px;
    color: indianred;
    font-style: italic;
}

.errorplaceholder {
    margin-top: -4px;
    margin-left: 5px;
    font-size: 8px;
    color: transparent;
    font-style: italic;
    cursor: default;
}

#pwerror {
    width: 95%;
    height: 22px;
}

